compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_constructors2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type Boxy { Box(Int) }\ntype Box { Box(x: Int) }"

---

error: Duplicate function definition with name `Box`
  ┌─ /src/one/two.gleam:2:12
  │
1 │ type Boxy { Box(Int) }
  │             -------- previously defined here
2 │ type Box { Box(x: Int) }
  │            ^^^^^^^^^^^ redefined here


